subtitle fontsize overflow fix and added support to open url in incognito tab

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -135,7 +135,7 @@ a:visited {
   padding: 0 10px 10px 0px;
 }
 .subtitle {
-  font-size: 1.35em;
+  font-size: 1.2em;
   line-height: 1em;
 }
 .add-site-icon,
